fix buf with submit on mobile safari

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ body {
   font-size: 16px;
   padding: 21px 31px 20px;
   border-radius: 0;
+  height: 59px;
 }
 
 @media (min-width: 768px) and (max-width: 1250px) {
@@ -1519,6 +1520,7 @@ body {
   .newsletter__input {
     width: 65%;
     margin: 0;
+    border-radius: 0;
   }
   .lists__wrapper {
     flex-direction: column;
