--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -111,6 +111,7 @@
     font-size: 16px;
 	padding: 21px 31px 20px;
 	border-radius: 0;
+	height: 59px;
 }
 
 @media (min-width: 768px) and (max-width: 1250px) {
