--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -181,6 +181,7 @@
 	.newsletter__input {
 		width: 65%;
 		margin: 0;
+		border-radius: 0;
 	}
 
 	.lists__wrapper {
